# eval-engineering

./: LICENSE  README.md
lesson-1/1-basic-chatbot/: app.py
lesson-1/2-chatbot-with-evals/: app.py
lesson-1/3-fixed-chatbot/: .env.example  app.py  requirements.txt
lesson-2/runzi/: .env.example  .gitignore  README.md  app.py  pyproject.toml  pytest.ini
lesson-2/runzi/.chainlit/: config.toml
lesson-2/runzi/.chainlit/translations/: en-US.json
lesson-2/runzi/evals_demo_app/agents/health/: nutrition_agent.py  recovery_agent.py
lesson-2/runzi/evals_demo_app/agents/races/: races_agent.py
lesson-2/runzi/evals_demo_app/agents/research/: research_agent.py
lesson-2/runzi/evals_demo_app/agents/shoes_and_apparel/: apparel_agent.py  brand_agent.py  shoe_agent.py
lesson-2/runzi/evals_demo_app/agents/training/: training_agent.py
lesson-2/runzi/evals_demo_app/models/: brands.json  brands.py  clothing.json  clothing.py  races.json  races.py  shoes.json  shoes.py
lesson-2/runzi/evals_demo_app/tools/: apparel_finder.py  brand_info.py  race_finder.py  shoe_finder.py
lesson-2/runzi/public/: stylesheet.css
lesson-2/runzi/tests/: __init__.py
lesson-2/runzi/tests/models/: test_loading_brands.py  test_loading_clothing.py  test_loading_shoes.py
lesson-3/datasets/: bad-inputs.json  good-inputs.json
lesson-3/scripts/: generate_logs.py
lesson-4/prompts/: custom-metric-prompt-original.md  custom-metric-prompt-tweaked.md
lesson-5/scripts/: .env.example  create_nutrition_prompt.py  create_nutrition_synthetic_dataset.py  run_nutrition_experiment.py
(+4 files in other folders)
